style.css
/*
rgba(47, 54, 64, 1.0)
rgba(53, 59, 72, 1.0)

rgba(48, 51, 107, 1.0)
rgba(72, 52, 212, 1.0)

rgba(220, 221, 225, 1.0)
rgba(223, 230, 233,1.0)
rgba(255, 255, 255, 1.0)

rgba(253, 203, 110, 1.0) 
*/

* {
	margin: 0;
	padding: 0;
	box-sizing: border-box;
}

html {
	font-size: 62.5%;
}

body {
	background: rgba(53, 59, 72, 1);
	font-family: 'Lato', sans-serif;
	font-weight: 300;
	font-size: 1.6rem;
	color: rgba(255, 255, 255, 1);
}

a,
a:link,
a:active,
a:visited {
	text-decoration: none;
	color: unset;
	cursor: pointer;
}

a:focus {
	outline: none;
}

a:active button {
	background-color: rgba(89, 98, 117, 1);
	color: rgba(255, 255, 255, 1);
}

.clear-fix::after {
	display: table;
	clear: both;
	content: '';
}

.container {
	margin: 8rem auto;
	width: 35rem;
	height: 70vh;
	background-color: rgba(47, 54, 64, 1);
	box-shadow: 0 0.5rem 2rem rgba(0, 0, 0, 0.5);
	border-radius: 2px;
	overflow: hidden;
}

.calc__screen {
	background-color: rgba(223, 230, 233, 1);
	color: rgba(47, 54, 64, 1);
	font-size: 3rem;
	font-weight: 400;
	text-align: right;
	width: 100%;
	height: 28%;
}

.calc__screen--top {
	padding: 2rem;
	font-size: 2rem;
}

.calc__screen--bottom {
	padding: 2rem;
}

.calc__body {
	height: 72%;
	width: 100%;
	border-bottom: 0.5px solid rgba(255, 255, 255, 0.2);
	font-weight: 400;
}

.calc__body--row {
	display: float;
	height: 20%;
	width: 100%;
}

.calc__btn {
	float: left;
	padding: 2rem;
	text-align: center;
	height: 100%;
	width: 25%;
	border: 0.5px solid rgba(255, 255, 255, 0.2);
	border-bottom: none;
	box-shadow: 0 0.3rem 10rem rgba(0, 0, 0, 0.2);
	background: inherit;
	color: inherit;
	cursor: pointer;
	outline: none;
}

.disabled {
	cursor: not-allowed;
}

.disabled:active {
	background-color: inherit;
}

.calc__btn--operator {
	background-color: rgba(48, 51, 107, 1);
}

.calc__btn--equal {
	background-color: rgba(240, 147, 43, 1);
	color: rgba(47, 54, 64, 1);
}

.footer {
	text-align: center;
	color: rgba(223, 230, 233, 1);
	font-size: 1.5rem;
	padding-right: 2rem;
}

.footer a {
	cursor: pointer;
}

span {
	margin-left: 4rem;
}

